:lipstick: Fixing table overflow styling

--- a/src/components/tables/ResultsTable.css
+++ b/src/components/tables/ResultsTable.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   width: 100%;
   height: 80vh;
+  overflow: hidden;
 }
 
 .results-table__body > * {
